--- a/apache-tomcat/tomcat.service
+++ b/apache-tomcat/tomcat.service
@@ -1,3 +1,5 @@
+sudo vi /etc/systemd/system/tomcat.service
+
 [Unit]
 Description=Apache Tomcat Web Application Container
 After=syslog.target network.target
